--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <junit-version>4.12</junit-version>
         <netty.version>4.0.33.Final</netty.version>
     </properties>
@@ -61,7 +61,7 @@
                             <goal>assembly</goal>
                         </goals>
                         <configuration>
-                            <finalName>mmd-netty</finalName>
+                            <finalName>netty-server</finalName>
                             <outputDirectory>${project.basedir}/dist</outputDirectory>
                             <appendAssemblyId>false</appendAssemblyId>
                             <archive>
